drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


GIT HEAD

- Prefer Qt5 over Qt4 by default with configure script.
- Introducing brand new OUT FX Send parameter per key/element.
- Fixed an old bug that caused an immediate crash on triggering
  any sample key/element with its (exclusive) Group parameter
  set to anything but "Off" or "1".


0.7.1  2015-08-24  A seventh-bis official beta.

- Fixed a recent bug/mistake that was causing a complete reset/
  revert of all element parameters to prior values upon loading
  an element sample file.
- Improved Qt4 vs. Qt5 configure builds (via qmake).


0.7.0  2015-07-24  A seventh official beta.

- Complete rewrite of Qt4 vs. Qt5 configure builds.
- Reset ramps after LV2 control port reconnection; small fixes
  to LV2.ttl (pull-requests by Hanspeter Portner aka. ventosus,
  on synthv1, thanks).
- MIDI Controllers/Programs is now an optional feature on the
  LV2 plugin forms, as some LV2 hosts might enforce the purity
  restriction to input control ports as being absolutely read-
  only parameter values from a plugin's instance perspective.
- MIDI Controller mapping/learn is now possible on all parameter
  control knobs; with global configuration also avaiable on the
  Help/Configure dialog.
- French (fr) translation line to desktop file added (by Olivier
  Humbert, thanks).


0.6.3  2015-05-09  A sixth official beta.

- Sample file drag-and-drop support has been added to the note
  element list widget.
- Main widget layout changed as much to allow sampler display
  and element list to expand or grow vertically as needed.


0.6.2  2015-04-30  A fifth official beta.

- Sample file path mapping has been fixed for LV2 plugin state
  restoration, which were preventing Ardour to reload any of
  the saved session or preset sample files in particular.
- Custom knob/dial behavior mode options are now introduced:
  linear and angular (aka. radial) as far to avoid abrupt