@@ -152,9 +152,10 @@
 		lv2:portProperty lv2:integer, lv2:enumeration ;
 		lv2:scalePoint [ rdfs:label "12dB/oct"; rdf:value 0 ] ;
 		lv2:scalePoint [ rdfs:label "24dB/oct"; rdf:value 1 ] ;
+		lv2:scalePoint [ rdfs:label "RBJ"; rdf:value 2 ] ;
 		lv2:default 0.0 ;
 		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
+		lv2:maximum 2.0 ;
 		lv2pg:group drumkv1_lv2:102_DCF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
