@@ -107,6 +107,7 @@ drumkv1widget::drumkv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 	QStringList slopes;
 	slopes << tr("12dB/oct");
 	slopes << tr("24dB/oct");
+	slopes << tr("RBJ");
 
 	m_ui.Dcf1SlopeKnob->insertItems(0, slopes);
 
