@@ -13,6 +13,7 @@ HEADERS = \
 	drumkv1_ui.h \
 	drumkv1_jack.h \
 	drumkv1_config.h \
+	drumkv1_filter.h \
 	drumkv1_sample.h \
 	drumkv1_wave.h \
 	drumkv1_ramp.h \
