@@ -14,6 +14,7 @@ HEADERS = \
 	drumkv1_ui.h \
 	drumkv1_lv2.h \
 	drumkv1_config.h \
+	drumkv1_filter.h \
 	drumkv1_sample.h \
 	drumkv1_wave.h \
 	drumkv1_ramp.h \
