@@ -6,6 +6,7 @@ ChangeLog
 
 GIT HEAD
 
+- A third DCF slope/type has been added: the RBJ's bi-quad.
 - Prefer Qt5 over Qt4 by default with configure script.
 - Introducing brand new OUT FX Send parameter per key/element.
 - Fixed an old bug that caused an immediate crash on triggering
